// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewFees renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      },
    ]
  }
>
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      amount
       (
      CELO
      )
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [],
            Object {
              "color": undefined,
            },
          ]
        }
        testID="undefined/value"
      >
        
        25.00
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#666666",
          },
        ]
      }
    >
      pricePer, {"coin":"CELO"}
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#666666",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#666666",
              },
            ],
            Object {
              "color": "#666666",
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        1.00
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#E6E6E6",
          "height": 1,
          "marginVertical": 16,
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      subtotal
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [],
            Object {
              "color": undefined,
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        25.09
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
          ]
        }
      >
        Simplex
         
        fee
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 6,
              "position": "relative",
              "top": 5,
            },
          ]
        }
      >
        <svg
          fill="none"
          height={14}
          viewBox="0 0 16 16"
          width={14}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#757575"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#757575"
            strokeWidth="1.25"
          />
        </svg>
      </View>
    </View>
    <Text>
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ],
            Object {
              "color": "#2E3338",
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        5.91
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      Total
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ],
            Object {
              "color": "#2E3338",
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        31.00
      </Text>
    </Text>
  </View>
</View>
`;

exports[`ReviewFees renders correctly 2`] = `
<View
  style={
    Array [
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      },
    ]
  }
>
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />
  <Modal
    animationType="none"
    deviceHeight={1334}
    deviceWidth={null}
    hardwareAccelerated={false}
    hideModalContentWhileAnimating={false}
    onBackdropPress={[Function]}
    onModalHide={[Function]}
    onModalWillHide={[Function]}
    onModalWillShow={[Function]}
    onRequestClose={[Function]}
    panResponderThreshold={4}
    scrollHorizontal={false}
    scrollOffset={0}
    scrollOffsetMax={0}
    scrollTo={null}
    statusBarTranslucent={true}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    swipeThreshold={100}
    transparent={true}
    visible={false}
  />
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      amount
       (
      CELO
      )
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [],
            Object {
              "color": undefined,
            },
          ]
        }
        testID="undefined/value"
      >
        
        25.00
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#666666",
          },
        ]
      }
    >
      pricePer, {"coin":"CELO"}
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#666666",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#666666",
              },
            ],
            Object {
              "color": "#666666",
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        1.00
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#E6E6E6",
          "height": 1,
          "marginVertical": 16,
          "width": "100%",
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      subtotal
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [],
            Object {
              "color": undefined,
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        25.09
      </Text>
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
          ]
        }
      >
        feeDiscount
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "marginLeft": 6,
              "position": "relative",
              "top": 5,
            },
          ]
        }
      >
        <svg
          fill="none"
          height={14}
          viewBox="0 0 16 16"
          width={14}
        >
          <circle
            cx="8"
            cy="8"
            r="7"
            stroke="#757575"
            strokeWidth="1.25"
          />
          <path
            d="M8 12V7M8 6V5"
            stroke="#757575"
            strokeWidth="1.25"
          />
        </svg>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#1AB775",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      free
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "color": "#2E3338",
          "display": "flex",
          "flexDirection": "row",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "justifyContent": "space-between",
          "lineHeight": 22,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      Total
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
          },
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "lineHeight": 22,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Array [
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
            ],
            Object {
              "color": "#2E3338",
            },
          ]
        }
        testID="undefined/value"
      >
        
        $
        31.00
      </Text>
    </Text>
  </View>
</View>
`;
